<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myapplicationcollections.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/ViewStyle"
            android:layout_alignParentTop="true"
            android:text="@string/project_name" />

        <Button
            android:id="@+id/button"
            style="@style/ViewStyle.Button"
            android:layout_below="@+id/textView"
            android:text="@string/popular_movies" />

        <Button
            android:id="@+id/button2"
            style="@style/ViewStyle.Button"
            android:layout_below="@+id/button"
            android:text="@string/stock_hawk" />

        <Button
            android:id="@+id/button3"
            style="@style/ViewStyle.Button"
            android:layout_below="@+id/button2"
            android:text="@string/build_bigger" />

        <Button
            android:id="@+id/button4"
            style="@style/ViewStyle.Button"
            android:layout_below="@+id/button3"
            android:text="@string/make_material" />

        <Button
            android:id="@+id/button5"
            style="@style/ViewStyle.Button"
            android:layout_below="@+id/button4"
            android:text="@string/go_ubiquitous" />

        <Button
            android:id="@+id/button6"
            style="@style/ViewStyle.Button"
            android:layout_below="@+id/button5"
            android:text="@string/capstone" />
    </RelativeLayout>
</ScrollView>